# MUSE-User-Sensitive-musical-Expression

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg
DAQ/DAQ Watch App/: ContentView.swift  SensorDataExporter.swift  SensorDataManager.swift  SensorWatch.entitlements  SensorWatchApp.swift
DAQ/DAQ Watch AppTests/: DAQ_Watch_AppTests.swift
DAQ/DAQ Watch AppUITests/: DAQ_Watch_AppUITests.swift  DAQ_Watch_AppUITestsLaunchTests.swift
DAQ/DAQ.xcodeproj/: project.pbxproj
data/: PPG_DaLiA_setup.py  sqlite_load.py
data/PPG_ACC_processed_data/: chop.py
dev/: utils.py
dev/decoder_scratch/: diffusion_decoder.py  finetuning_rlfh.py
dev/encoder_scratch/: Qwen_VL2B.ipynb  classifier_train.py  encoder_train.py  requirements.txt  vae_model.py
docs/: Cognitive Audio - Proposal.pptx  Cognitive Audio - Technical Report.pptx  ComputeResources.xlsx
docs/service_architecture/: README.md  comms_structure.txt.txt  throughput_control_ex.py
models/encoder/: encoder.py
src/core_prcs/: activity2music.py  app.py  musicgen_localmachine.py  musicgen_modtest.py  musicgen_test_local.py  vm_server.py
src/edge_acq/: ContentView.swift  README.md  SensorDataExporter.swift  SensorDataManager.swift  jetson_edge_strm.py  watch_listener.py
src/edge_client/: client_proxy_streamer.py  edge_client_redacted.py  jetson_edge_cli.py  proxy_server.py
src/musicgen_ext/: __init__.py  context_model.py  modeling_musicgen_ext.py  rolling_kv.py
src/musicgen_ext.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/utils/: dataprep.py  dsp_features.py
(+30 files in other folders)
