# This is a setup configuration file for MusicGen Extension Package.
# Package allows for rolling KV cache persistence to maintain MusicGen state across queries.
# python -m pip install -e .
[metadata]
name = musicgen-ext
version = 0.1.0
author = Your Name
description = Extra utilities for MusicGen
license = MIT

[options]
packages = find:
install_requires =
    transformers>=4.40
    torch         # already in env, but listed for completeness

[options.packages.find]
where = src
